@@ -141,3 +141,4 @@ calculateCCA to getCCA
 + Updated parameter names to follow naming convention "parameter.name"
 + rename converters makeTreeSEFrom* to convertFrom* and makePhyloseqFromTreeSE to 
 convertToPhyloseq
++ add rowTree agglomeration and RefSeq agglomeration in agglomerateByPrevalence
